--- a/ShoppingStore/Views/Shared/_LoginPartial.cshtml
+++ b/ShoppingStore/Views/Shared/_LoginPartial.cshtml
@@ -23,5 +23,6 @@ else
     <ul class="nav navbar-nav navbar-right">
         <li><a class="nav-item" asp-area="" asp-controller="Account" asp-action="Register">@Localizer["Register"]</a></li>
         <li><a class="nav-item" asp-area="" asp-controller="Account" asp-action="Login">@Localizer["LogIn"]</a></li>
+        <li>@await Component.InvokeAsync("CartSummary")</li>
     </ul>
 }
