Add External Login Example

--- a/ShoppingStore/Views/Account/Login.cshtml
+++ b/ShoppingStore/Views/Account/Login.cshtml
@@ -19,9 +19,9 @@
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Email"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    <label asp-for="UserNameOrEmail"></label>
+                    <input asp-for="UserNameOrEmail" class="form-control" />
+                    <span asp-validation-for="UserNameOrEmail" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password"></label>
@@ -71,7 +71,22 @@
                             <p>
                                 @foreach (var provider in loginProviders)
                                 {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="@Localizer["LogInUsingYour"] @provider.DisplayName @Localizer["account"] ">@provider.Name</button>
+                                    if (provider.Name=="Google")
+                                    {
+                                        <button type="submit" class="btn btn-danger" name="provider" value="@provider.Name" title="@Localizer["LogInUsingYour"] @provider.DisplayName @Localizer["account"] ">@Localizer[provider.Name]</button>
+                                    }
+                                    else if (provider.Name == "Facebook")
+                                    {
+                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="@Localizer["LogInUsingYour"] @provider.DisplayName @Localizer["account"] ">@Localizer[@provider.Name]</button>
+                                    }
+                                    else if (provider.Name == "Twitter")
+                                    {
+                                        <button type="submit" class="btn btn-info" name="provider" value="@provider.Name" title="@Localizer["LogInUsingYour"] @provider.DisplayName @Localizer["account"] ">@Localizer[@provider.Name]</button>
+                                    }
+                                    else 
+                                    {
+                                        <button type="submit" class="btn btn-warning" name="provider" value="@provider.Name" title="@Localizer["LogInUsingYour"] @provider.DisplayName @Localizer["account"] ">@Localizer[@provider.Name]</button>
+                                    }
                                 }
                             </p>
                         </div>
