--- a/ShoppingStore/Views/Cart/Index.cshtml
+++ b/ShoppingStore/Views/Cart/Index.cshtml
@@ -18,12 +18,12 @@
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
+            <th>@Localizer["ProductImage"]</th>
             <th>@Localizer["ProductName"]</th>
             <th>@Localizer["Quantity"]</th>
             <th class="text-right">@Localizer["Price"]</th>
             <th class="text-right">@Localizer["Subtotal"]</th>
             <th>Quantity Of Remove Item</th>
-            <th>Remove All Line</th>
         </tr>
     </thead>
     <tbody>
@@ -32,8 +32,11 @@
             @foreach (var line in cartLines)
             {
                 <tr>
+                    <td>
+                        <img src="@line.Product.Photo.FileAddress" width="100" height="100" />
+                    </td>
                     <td class="text-left">@line.Product.Name</td>
-                    <td class="text-center">@line.Quantity</td>
+                    <td class="text-center"><input type="number" value="@line.Quantity" class="form-control" style="width:80px;" max="10000"/></td>
                     <td class="text-right">
                         @line.Product.Price.ToString("C")
                     </td>
@@ -44,18 +47,17 @@
                         <form asp-action="RemoveItem" asp-controller="Cart" method="post">
                             <input type="hidden" name="ProductId" value="@line.Product.ProductId" />
                             <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
-                            <input type="number" name="quantity" value="1" max="10000" class="form-control" />
-                            <br/>
+                            <input type="number" name="quantity" value="1" max="10000" class="form-control"  />
+                            <br />
                             <button type="submit" class="btn btn-sm btn-danger pull-right">
                                 RemoveItem
                             </button>
                         </form>
-                    </td>
-                    <td>
+
                         <form asp-action="RemoveAll" asp-controller="Cart" method="post">
                             <input type="hidden" name="ProductId" value="@line.Product.ProductId" />
                             <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
-                            <button type="submit" class="btn btn-sm btn-danger">
+                            <button type="submit" class="btn btn-sm btn-danger pull-right" style="margin-right:10px;">
                                 RemoveAll
                             </button>
                         </form>
