--- a/ShoppingStore/Views/_ViewImports.cshtml
+++ b/ShoppingStore/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.AspNetCore.Identity
+@using ShoppingStore.Models
 @using ShoppingStore.Models.RoleViewModels
 @using ShoppingStore.Models.LocalizedViewModels
 @using ShoppingStore.Models.AccountViewModels
@@ -8,6 +9,7 @@
 @using ShoppingStore.Models.ProductViewModels
 @using ShoppingStore.Models.PhotoViewModels
 @using ShoppingStore.Models.CartViewModels
+@using ShoppingStore.Infrastructure.Extensions
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
