--- a/ShoppingStore/Views/Shared/_Layout.cshtml
+++ b/ShoppingStore/Views/Shared/_Layout.cshtml
@@ -40,11 +40,15 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a></li>
-                    <li><a asp-controller="Localization" asp-action="Index">Localization Editor</a></li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li><a asp-controller="Localization" asp-action="Index">Localization Editor</a></li>
+                        <li><a asp-controller="RoleAdmin" asp-action="Index">RoleManager</a></li>
+                    }
                     <li><a asp-controller="Product" asp-action="Index">@Localizer["Products"]</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
-              
+
             </div>
         </div>
     </nav>
