--- a/ShoppingStore/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/ShoppingStore/Views/Shared/_SelectLanguagePartial.cshtml
@@ -18,9 +18,8 @@
     <form id="selectLanguage" asp-controller="Home"
           asp-action="SetLanguage" asp-route-returnUrl="@Context.Request.Path"
           method="post" class="form-horizontal" role="form">
-        @Localizer["Language"]: <select name="culture"
+        @Localizer["Language"]: <select name="culture" class="form-control pull-right" style="width:200px;"
                                         asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems"></select>
-        <button type="submit" class="btn btn-primary btn-xs">@Localizer["ChangeLanguage"]</button>
-
+        <button type="submit" class="btn btn-primary" style="margin-right:10px;">@Localizer["ChangeLanguage"]</button>
     </form>
 </div>  
