--- a/ShoppingStore/Views/Order/Checkout.cshtml
+++ b/ShoppingStore/Views/Order/Checkout.cshtml
@@ -1,26 +1,54 @@
 ﻿@model Order
 
 <h2>Check out now</h2>
-<p>Please enter your details</p>
-<form generic 
-      asp-validation-summary="All"
-      asp-antiforgery="true" form-model="@Model" asp-action="Checkout" asp-controller="Order" method="post"
-      attrs-tag="{
-            input:{class:'form-control'}
-          }"
-      attrs-tag-from-model="{
-            orderid:{
-                input:{type:'hidden'}
-            }
-          }"
-      disable-tags-from-model="{
-            orderid:{
-                label:true,
-                validation:true
-            }
-          }">
+<p>Please enter your details,and we'll ship your goods right away</p>
 
+<form asp-controller="Order" asp-action="Checkout" asp-antiforgery="true" method="post">
+    <h3>Ship to</h3>
+    <div class="form-group">
+        <label>Name:</label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name"></span>
+    </div>
+    <h3>Address</h3>
+    <div class="form-group">
+        <label>Line 1:</label>
+        <input asp-for="Line1" class="form-control" />
+        <span asp-validation-for="Line1"></span>
+    </div>
+    <div class="form-group">
+        <label>Line 2:</label>
+        <input asp-for="Line2" class="form-control" />
+        <span asp-validation-for="Line2"></span>
+    </div>
+    <div class="form-group">
+        <label>Line 3:</label>
+        <input asp-for="Line3" class="form-control" />
+        <span asp-validation-for="Line3"></span>
+    </div>
+    <div class="form-group">
+        <label>City:</label>
+        <input asp-for="City" class="form-control" />
+        <span asp-validation-for="City"></span>
+    </div>
+    <div class="form-group">
+        <label>State:</label>
+        <input asp-for="State" class="form-control" />
+        <span asp-validation-for="State"></span>
+    </div>
+    <div class="form-group">
+        <label>Zip:</label>
+        <input asp-for="Zip" class="form-control" />
+        <span asp-validation-for="Zip"></span>
+    </div>
+    <div class="form-group">
+        <label>Country:</label>
+        <input asp-for="Country" class="form-control" />
+        <span asp-validation-for="Country"></span>
+    </div>
     <div class="text-center">
         <input class="btn btn-primary" type="submit" value="Complete Order" />
     </div>
 </form>
+
+
