--- a/ShoppingStore/Views/Cart/Index.cshtml
+++ b/ShoppingStore/Views/Cart/Index.cshtml
@@ -87,7 +87,9 @@
 
     <div class="text-center">
         <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
+        @if (cartLines.Count() != 0) {
         <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">
             Checkout
         </a>
+        }
     </div>
