Add Seed Data for product and categories

--- a/ShoppingStore/Views/Category/Index.cshtml
+++ b/ShoppingStore/Views/Category/Index.cshtml
@@ -23,7 +23,7 @@
                     @Localizer["AddNewCategory"]
                 </button>
 
-<a href="@ViewBag.ReturnUrl" class="btn btn-warning">Go Back</a>
+<a href="@ViewBag.ReturnUrl" class="btn btn-warning">@Localizer["GoBack"]</a>
 <br />
 <br />
 
