--- a/ShoppingStore/Views/Cart/Index.cshtml
+++ b/ShoppingStore/Views/Cart/Index.cshtml
@@ -12,18 +12,16 @@
 }
 
 
-
-
-<h2>Your Cart</h2>
+<h2>@Localizer["YourCart"]</h2>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th>@Localizer["ProductImage"]</th>
+            <th>@Localizer["ProductPhoto"]</th>
             <th>@Localizer["ProductName"]</th>
-            <th>@Localizer["Quantity"]</th>
+            <th class="text-center">@Localizer["Quantity"]</th>
+            <th>@Localizer["RemoveItem"]</th>
             <th class="text-right">@Localizer["Price"]</th>
             <th class="text-right">@Localizer["Subtotal"]</th>
-            <th>Quantity Of Remove Item</th>
         </tr>
     </thead>
     <tbody>
@@ -36,21 +34,18 @@
                         <img src="@line.Product.Photo.FileAddress" width="100" height="100" />
                     </td>
                     <td class="text-left">@line.Product.Name</td>
-                    <td class="text-center"><input type="number" value="@line.Quantity" class="form-control" style="width:80px;" max="10000"/></td>
-                    <td class="text-right">
-                        @line.Product.Price.ToString("C")
-                    </td>
-                    <td class="text-right">
-                        @((line.Quantity * line.Product.Price).ToString("C"))
+                    <td class="text-center">
+                        @line.Quantity
                     </td>
                     <td>
+
                         <form asp-action="RemoveItem" asp-controller="Cart" method="post">
                             <input type="hidden" name="ProductId" value="@line.Product.ProductId" />
                             <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
-                            <input type="number" name="quantity" value="1" max="10000" class="form-control"  />
+                            <input type="number" name="quantity" value="1" min="0" max="10000" class="form-control" />
                             <br />
                             <button type="submit" class="btn btn-sm btn-danger pull-right">
-                                RemoveItem
+                                @Localizer["RemoveItem"]
                             </button>
                         </form>
 
@@ -58,15 +53,23 @@
                             <input type="hidden" name="ProductId" value="@line.Product.ProductId" />
                             <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
                             <button type="submit" class="btn btn-sm btn-danger pull-right" style="margin-right:10px;">
-                                RemoveAll
+                                @Localizer["RemoveAll"]
                             </button>
                         </form>
                     </td>
+                    <td class="text-right">
+                        @line.Product.Price.ToString("C")
+                    </td>
+                    <td class="text-right">
+                        @((line.Quantity * line.Product.Price).ToString("C"))
+                    </td>
+
+
                 </tr>
             }
         <tfoot>
             <tr>
-                <td colspan="5" class="text-right">Total:</td>
+                <td colspan="5" class="text-right">@Localizer["Total"]:</td>
                 <td class="text-right">
                     @Model.Cart.ComputeTotalValue(currentCulture).ToString("c")
                 </td>
@@ -77,7 +80,7 @@
         {
             <tr>
                 <td colspan="6" class="text-center text-danger">
-                    <h3>You don't have any items in your cart</h3>
+                    <h3>@Localizer["NoItemsInCart"]</h3>
                 </td>
             </tr>
         }
@@ -86,10 +89,11 @@
     </table>
 
     <div class="text-center">
-        <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
-        @if (cartLines.Count() != 0) {
-        <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">
-            Checkout
-        </a>
+        <a class="btn btn-primary" href="@Model.ReturnUrl">@Localizer["ContinueShopping"]</a>
+        @if (cartLines.Count() != 0)
+        {
+            <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">
+                @Localizer["Checkout"]
+            </a>
         }
     </div>
