--- a/ShoppingStore/Views/Order/Checkout.cshtml
+++ b/ShoppingStore/Views/Order/Checkout.cshtml
@@ -1,53 +1,55 @@
 ﻿@model Order
 
-<h2>Check out now</h2>
-<p>Please enter your details,and we'll ship your goods right away</p>
+@inject IViewLocalizer Localizer
+
+<h2>@Localizer["CheckoutForm"]</h2>
+<p>@Localizer["OrderDetail"]</p>
 
 <form asp-controller="Order" asp-action="Checkout" asp-antiforgery="true" method="post">
-    <h3>Ship to</h3>
+    <h3>@Localizer["ShipTo"]</h3>
     <div class="form-group">
-        <label>Name:</label>
+        <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name"></span>
     </div>
-    <h3>Address</h3>
+    <h3>@Localizer["Address"]:</h3>
     <div class="form-group">
-        <label>Line 1:</label>
+        <label asp-for="Line1">@Localizer["AddressLine"]1</label>
         <input asp-for="Line1" class="form-control" />
         <span asp-validation-for="Line1"></span>
     </div>
     <div class="form-group">
-        <label>Line 2:</label>
+        <label asp-for="Line2">@Localizer["AddressLine"]2</label>
         <input asp-for="Line2" class="form-control" />
         <span asp-validation-for="Line2"></span>
     </div>
     <div class="form-group">
-        <label>Line 3:</label>
+        <label asp-for="Line3">@Localizer["AddressLine"]3</label>
         <input asp-for="Line3" class="form-control" />
         <span asp-validation-for="Line3"></span>
     </div>
     <div class="form-group">
-        <label>City:</label>
+        <label asp-for="City"></label>
         <input asp-for="City" class="form-control" />
         <span asp-validation-for="City"></span>
     </div>
     <div class="form-group">
-        <label>State:</label>
+        <label asp-for="State"></label>
         <input asp-for="State" class="form-control" />
         <span asp-validation-for="State"></span>
     </div>
     <div class="form-group">
-        <label>Zip:</label>
+        <label asp-for="Zip"></label>
         <input asp-for="Zip" class="form-control" />
         <span asp-validation-for="Zip"></span>
     </div>
     <div class="form-group">
-        <label>Country:</label>
+        <label asp-for="Country"></label>
         <input asp-for="Country" class="form-control" />
         <span asp-validation-for="Country"></span>
     </div>
     <div class="text-center">
-        <input class="btn btn-primary" type="submit" value="Complete Order" />
+        <input class="btn btn-primary" type="submit" value="@Localizer["CompleteOrder"]" />
     </div>
 </form>
 
