--- a/ShoppingStore/Views/Photo/UploadView.cshtml
+++ b/ShoppingStore/Views/Photo/UploadView.cshtml
@@ -1,149 +1,152 @@
 ﻿@using Microsoft.AspNetCore.Localization
 @inject IViewLocalizer Localizer
 
-<br/>
-<a href="@ViewBag.ReturnUrl" class="btn btn-warning">Back</a>
-<br/>
-<br/>
+<br />
+<a href="@ViewBag.ReturnUrl" class="btn btn-warning">@Localizer["GoBack"]</a>
+    <br />
+    <br />
 
-<div id="actions" class="row">
-    <div class="col-lg-7">
-        <!-- The fileinput-button span is used to style the file input field as button -->
-        <span class="btn btn-success fileinput-button dz-clickable">
-            <i class="glyphicon glyphicon-plus"></i>
-            <span>Add files...</span>
-        </span>
-        <button type="submit" class="btn btn-primary start">
-            <i class="glyphicon glyphicon-upload"></i>
-            <span>Start upload</span>
-        </button>
-        <button type="reset" class="btn btn-warning cancel">
-            <i class="glyphicon glyphicon-ban-circle"></i>
-            <span>Cancel upload</span>
-        </button>
-    </div>
-
-    <div class="col-lg-5">
-        <!-- The global file processing state -->
-        <span class="fileupload-process">
-            <div id="total-progress" class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" style="opacity: 0;">
-                <div class="progress-bar progress-bar-success" style="width: 100%;" data-dz-uploadprogress=""></div>
-            </div>
-        </span>
-    </div>
-</div>
-
-<!--Upload preview-->
-<!-- HTML heavily inspired by http://blueimp.github.io/jQuery-File-Upload/ -->
-<div class="table table-striped" id="previews">
-    <div id="template" class="file-row">
-        <!-- This is used as the file preview template -->
-        <div>
-            <span class="preview"><img data-dz-thumbnail /></span>
-        </div>
-        <div>
-            <p class="name" data-dz-name></p>
-            <strong class="error text-danger" data-dz-errormessage></strong>
-        </div>
-        <div>
-            <p class="size" data-dz-size></p>
-            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
-                <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>
-            </div>
-        </div>
-        <div>
-            <button class="btn btn-primary start">
+    <div id="actions" class="row">
+        <div class="col-lg-7">
+            <!-- The fileinput-button span is used to style the file input field as button -->
+            <span class="btn btn-success fileinput-button dz-clickable">
+                <i class="glyphicon glyphicon-plus"></i>
+                <span>@Localizer["AddPhotos"]...</span>
+            </span>
+            <button type="submit" class="btn btn-primary start">
                 <i class="glyphicon glyphicon-upload"></i>
-                <span>Start</span>
+                <span>@Localizer["StartUploadAll"]</span>
             </button>
-            <button data-dz-remove class="btn btn-warning cancel">
+            <button type="reset" class="btn btn-warning cancel">
                 <i class="glyphicon glyphicon-ban-circle"></i>
-                <span>Cancel</span>
-            </button>
-            <button data-dz-remove class="btn btn-danger delete" style="display:none;">
-                <i class="glyphicon glyphicon-trash"></i>
-                <span>Delete</span>
+                <span>@Localizer["CancelUploadAll"]</span>
             </button>
         </div>
+
+        <div class="col-lg-5">
+            <!-- The global file processing state -->
+            <span class="fileupload-process">
+                <div id="total-progress" class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" style="opacity: 0;">
+                    <div class="progress-bar progress-bar-success" style="width: 100%;" data-dz-uploadprogress=""></div>
+                </div>
+            </span>
+        </div>
     </div>
-</div>
 
-@section Scripts{
+    <!--Upload preview-->
+    <!-- HTML heavily inspired by http://blueimp.github.io/jQuery-File-Upload/ -->
+    <div class="table table-striped" id="previews">
+        <div id="template" class="file-row">
+            <!-- This is used as the file preview template -->
+            <div>
+                <span class="preview"><img data-dz-thumbnail /></span>
+            </div>
+            <div>
+                <p class="name" data-dz-name></p>
+                <strong class="error text-danger" data-dz-errormessage></strong>
+            </div>
+            <div>
+                <p class="size" data-dz-size></p>
+                <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
+                    <div class="progress-bar progress-bar-success" style="width:0%;" data-dz-uploadprogress></div>
+                </div>
+            </div>
+            <div>
+                <button class="btn btn-primary start">
+                    <i class="glyphicon glyphicon-upload"></i>
+                    <span>@Localizer["Upload"]</span>
+                </button>
+                <button data-dz-remove class="btn btn-warning cancel">
+                    <i class="glyphicon glyphicon-ban-circle"></i>
+                    <span>@Localizer["Cancel"]</span>
+                </button>
+                <button data-dz-remove class="btn btn-danger delete" style="display:none;">
+                    <i class="glyphicon glyphicon-trash"></i>
+                    <span>@Localizer["Delete"]</span>
+                </button>
+            </div>
+        </div>
+    </div>
 
-    <script>
-        // Get the template HTML and remove it from the doumenthe template HTML and remove it from the doument
-        var previewNode = document.querySelector("#template");
-        previewNode.id = "";
-        var previewTemplate = previewNode.parentNode.innerHTML;
-        previewNode.parentNode.removeChild(previewNode);
+    @section Scripts{
 
-        var myDropzone = new Dropzone(document.body, { // Make the whole body a dropzone
-            url: "/api/uploadfile", // Set the url
-            thumbnailWidth: 80,
-            thumbnailHeight: 80,
-            parallelUploads: 20,
-            previewTemplate: previewTemplate,
-            autoQueue: false, // Make sure the files aren't queued until manually added
-            previewsContainer: "#previews", // Define the container to display the previews
-            clickable: ".fileinput-button" // Define the element that should be used as click trigger to select files.
-        });
+        <script>
+            // Get the template HTML and remove it from the doumenthe template HTML and remove it from the doument
+            var previewNode = document.querySelector("#template");
+            previewNode.id = "";
+            var previewTemplate = previewNode.parentNode.innerHTML;
+            previewNode.parentNode.removeChild(previewNode);
 
-        myDropzone.on("addedfile", function (file) {
-            // Hookup the start button
-            file.previewElement.querySelector(".start").onclick = function () { myDropzone.enqueueFile(file); };
-        });
+            var myDropzone = new Dropzone(document.body, { // Make the whole body a dropzone
+                url: "/api/uploadfile", // Set the url
+                thumbnailWidth: 80,
+                thumbnailHeight: 80,
+                parallelUploads: 20,
+                previewTemplate: previewTemplate,
+                autoQueue: false, // Make sure the files aren't queued until manually added
+                previewsContainer: "#previews", // Define the container to display the previews
+                clickable: ".fileinput-button" // Define the element that should be used as click trigger to select files.
+            });
 
-        // Update the total progress bar
-        myDropzone.on("totaluploadprogress", function (progress) {
-            document.querySelector("#total-progress .progress-bar").style.width = progress + "%";
-        });
+            myDropzone.on("addedfile", function (file) {
+                // Hookup the start button
+                file.previewElement.querySelector(".start").onclick = function () { myDropzone.enqueueFile(file); };
+            });
 
-        myDropzone.on("sending", function (file) {
-            // Show the total progress bar when upload starts
-            document.querySelector("#total-progress").style.opacity = "1";
-            // And disable the start button
-            file.previewElement.querySelector(".start").setAttribute("style", "display:none;");
-            file.previewElement.querySelector(".cancel").setAttribute("style", "display:none;");
-        });
+            // Update the total progress bar
+            myDropzone.on("totaluploadprogress", function (progress) {
+                document.querySelector("#total-progress .progress-bar").style.width = progress + "%";
+            });
 
-        myDropzone.on("success", function (file, response) {
+            myDropzone.on("sending", function (file) {
+                // Show the total progress bar when upload starts
+                document.querySelector("#total-progress").style.opacity = "1";
+                // And disable the start button
+                file.previewElement.querySelector(".start").setAttribute("style", "display:none;");
+                file.previewElement.querySelector(".cancel").setAttribute("style", "display:none;");
+            });
 
-            file.previewElement.querySelector(".delete").setAttribute("style", "display:inline");
+            myDropzone.on("success", function (file, response) {
 
-            $('#aniimated-thumbnials').append(
-                '<a href="' + response.fileAddress + '">' +
-                '<img src="' + response.fileAddress + '" width="100" height="100"/></a>');
+                file.previewElement.querySelector(".delete").setAttribute("style", "display:inline");
 
-            var dataString = "id=" + response.id;
-            file.previewElement.querySelector(".delete").onclick = function (e) {
-                e.preventDefault();
-                console.log(file);
-                $.ajax({
-                    url: "api/deletefile",
-                    type: "DELETE",
-                    data: dataString
-                }).done(function () {
-                    console.log("success");
-                }).fail(function () {
-                    console.log("failed");
-                })
-            }
+                $('#aniimated-thumbnials').append(
+                    '<a href="' + response.fileAddress + '">' +
+                    '<img src="' + response.fileAddress + '" width="100" height="100"/></a>');
 
-        });
 
-        // Hide the total progress bar when nothing's uploading anymore
-        myDropzone.on("queuecomplete", function (progress) {
-            document.querySelector("#total-progress").style.opacity = "0";
-        });
 
-        // Setup the buttons for all transfers
-        // The "add files" button doesn't need to be setup because the config
-        // `clickable` has already been specified.
-        document.querySelector("#actions .start").onclick = function () {
-            myDropzone.enqueueFiles(myDropzone.getFilesWithStatus(Dropzone.ADDED));
-        };
-        document.querySelector("#actions .cancel").onclick = function () {
-            myDropzone.removeAllFiles(true);
-        };
-    </script>
-}
+                file.previewElement.querySelector(".delete").onclick = function (e) {
+                    e.preventDefault();
+
+                    var dataString = "name=" + response.fileName;
+
+                    $.ajax({
+                        url: "/api/deletePhoto",
+                        type: "DELETE",
+                        data: dataString
+                    }).done(function () {
+                        console.log("success");
+                    }).fail(function () {
+                        console.log("failed");
+                    })
+                }
+
+            });
+
+            // Hide the total progress bar when nothing's uploading anymore
+            myDropzone.on("queuecomplete", function (progress) {
+                document.querySelector("#total-progress").style.opacity = "0";
+            });
+
+            // Setup the buttons for all transfers
+            // The "add files" button doesn't need to be setup because the config
+            // `clickable` has already been specified.
+            document.querySelector("#actions .start").onclick = function () {
+                myDropzone.enqueueFiles(myDropzone.getFilesWithStatus(Dropzone.ADDED));
+            };
+            document.querySelector("#actions .cancel").onclick = function () {
+                myDropzone.removeAllFiles(true);
+            };
+        </script>
+    }
