--- a/ShoppingStore/Views/RoleAdmin/Create.cshtml
+++ b/ShoppingStore/Views/RoleAdmin/Create.cshtml
@@ -1,16 +1,16 @@
 ﻿@model string
-
+@inject IViewLocalizer Localizer
 <div class="bg-primary panel-body">
-    <h4>Create Role</h4>
+    <h4>@Localizer["CreateRole"]</h4>
 </div>
 
 <div asp-validation-summary="All" class="text-danger"></div>
 
 <form asp-action="Create" asp-controller="RoleAdmin" method="post">
     <div class="form-group">
-        <label for="name">RoleName</label>
+        <label for="name">@Localizer["RoleName"]</label>
         <input name="name" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Create</button>
-    <a asp-action="Index" class="btn btn-default">Cancel</a>
+    <button type="submit" class="btn btn-primary">@Localizer["Submit"]</button>
+    <a asp-action="Index" class="btn btn-default">@Localizer["Cancel"]</a>
 </form>
