--- a/ShoppingStore/Views/RoleAdmin/Edit.cshtml
+++ b/ShoppingStore/Views/RoleAdmin/Edit.cshtml
@@ -1,8 +1,8 @@
 ﻿@model RoleEditViewModel
+@inject IViewLocalizer Localizer
 <br />
-
 <div class="bg-primary panel-body">
-    Edit Role
+    @Localizer["Edit"]
 </div>
 
 <div asp-validation-summary="All" class="text-danger"></div>
@@ -12,12 +12,12 @@
     <input type="hidden" name="roleName" value="@Model.Role.Name" />
     <input type="hidden" name="roleId" value="@Model.Role.Id" />
 
-    <h6 class="bg-info panel-body">Add To @Model.Role.Name</h6>
+    <h6 class="bg-info panel-body">@Localizer["AddTo"] @Model.Role.Name</h6>
     <table class="table table-bordered table-condensed">
         @if (Model.NonMembers.Count() == 0)
         {
             <tr>
-                <td colspan="2">All Users Are Members</td>
+                <td colspan="2">@Localizer["All Users Are Members"]</td>
             </tr>
         }
         else
@@ -35,13 +35,13 @@
         }
     </table>
     <h6 class="bg-info panel-body">
-        Remove From @Model.Role.Name
+        @Localizer["RemoveFrom"] @Model.Role.Name
     </h6>
     <table class="table table-bordered table-condensed">
         @if (Model.Members.Count() == 0)
         {
             <tr>
-                <td colspan="2">No Users Are Members</td>
+                <td colspan="2">@Localizer["No Users Are Members"]</td>
             </tr>
         }
         else
@@ -57,6 +57,6 @@
             }
         }
     </table>
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a asp-action="Index" class="btn btn-default">Cancel</a>
+    <button type="submit" class="btn btn-primary">@Localizer["Save"]</button>
+    <a asp-action="Index" class="btn btn-default">@Localizer["Cancel"]</a>
 </form>
