--- a/ShoppingStore/Views/RoleAdmin/Index.cshtml
+++ b/ShoppingStore/Views/RoleAdmin/Index.cshtml
@@ -1,22 +1,22 @@
 ﻿@model IEnumerable<IdentityRole>
-
-<br/>
+@inject IViewLocalizer Localizer
+<br />
 <div class="bg-primary panel-body">
-    <h4>Roles</h4>
+    <h4>@Localizer["Roles"]</h4>
 </div>
 
 <div class="text-danger" asp-validation-summary="ModelOnly"></div>
 <table class="table table-condensed table-bordered">
     <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Users</th>
+        <th>@Localizer["UserId"]</th>
+        <th>@Localizer["Name"]</th>
+        <th>@Localizer["Users"]</th>
         <th></th>
     </tr>
     @if (Model.Count() == 0)
     {
         <tr>
-            <td colspan="4" class="text-center">No Roles</td>
+            <td colspan="4" class="text-center">@Localizer["NoRoles"]</td>
         </tr>
     }
     else
@@ -31,10 +31,10 @@
                     <form asp-action="Delete" asp-controller="RoleAdmin"
                           asp-route-id="@role.Id" method="post">
                         <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@role.Id">
-                            Edit
+                            @Localizer["Edit"]
                         </a>
                         <button type="submit" class="btn btn-sm btn-danger">
-                            Delete
+                            @Localizer["Delete"]
                         </button>
                     </form>
                 </td>
@@ -42,4 +42,4 @@
         }
     }
 </table>
-<a class="btn btn-primary" asp-action="Create">Create</a>
+<a class="btn btn-primary" asp-action="Create">@Localizer["CreateRole"]</a>
