Fix component view

--- a/ShoppingStore/Views/Shared/Components/CartSummary/CartSummary.cshtml
+++ b/ShoppingStore/Views/Shared/Components/CartSummary/CartSummary.cshtml
@@ -11,7 +11,7 @@
 
 
 <div class="">
-    @if (cartLines.Count() != 0)
+    @if (cartLines.Count() > 0)
     {
         <small class="navbar-text">
             <b>@Localizer["Cart"]:</b>
